[workspace]
resolver = "3"
members = ["crates/bevy_deterministic", "crates/fx"]

[workspace.dependencies]
fx = { path = "crates/fx" }

bevy = "0.18.0"
fixed = { version = "1.29.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
rustc-hash = "2.1.1"
indexmap = "2.13.0"
cordic = "0.1.5"
derive_more = "2.1.1"
