[workspace]
resolver = "3"
members = [
    "crates/fixed_math",
    "crates/input",
    "crates/plugin",
    "crates/render",
    "crates/whitelace_core",
    "crates/whitelace_physics",
    "crates/whitelace_sync",
    "crates/whitelace_time",
    "crates/whitelace_transform",
]

[workspace.dependencies]
fixed_math = { path = "crates/fixed_math" }
whitelace_core = { path = "crates/whitelace_core" }
whitelace_sync = { path = "crates/whitelace_sync" }
whitelace_physics = { path = "crates/whitelace_physics" }
whitelace_time = { path = "crates/whitelace_time" }
whitelace_transform = { path = "crates/whitelace_transform" }

fixed = { version = "1.30.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
rustc-hash = "2.1.1"
indexmap = "2.13.0"
cordic = "0.1.5"
derive_more = "2.1.1"

[workspace.dependencies.bevy]
version = "0.18.0"
default-features = false
