[package]
name = "bevy_deterministic"
version = "0.1.0"
edition = "2024"

[dependencies]
fx.workspace = true

bevy.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true
cordic.workspace = true
derive_more.workspace = true
