[package]
name = "bevy_deterministic"
version = "0.1.0"
edition = "2024"

[dependencies]
fixed_math.workspace = true

serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true
cordic.workspace = true
derive_more.workspace = true

[dependencies.bevy]
workspace = true
features = ["critical-section", "bevy_state", "bevy_winit"]
